bug fixes in frontend

--- a/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
@@ -6,8 +6,8 @@
     <form>
       <mat-card>
       <div class="form-group">
-        <label for="name">Medicine Name:</label>
-        <input type="name" [(ngModel)]="user.medName" placeholder="Name" name="name" class="form-control" id="name">
+        <label for="medicineName">Medicine Name:</label>
+        <input type="name" [(ngModel)]="user.medicineName" placeholder="Medicine Name" name="medicineName" class="form-control" id="medicineName">
       </div>
     </mat-card>
     <mat-card>
