--- a/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
+++ b/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
@@ -15,7 +15,7 @@
         <tbody>
             <tr *ngFor="let medicine of medicines">
                 <td><mat-card>{{medicine.city}}</mat-card></td>
-                <td><mat-card>{{medicine.medName}}</mat-card></td>
+                <td><mat-card>{{medicine.medicineName}}</mat-card></td>
                 <td><mat-card>{{medicine.pharmacy}}</mat-card></td>
                 <td><mat-card>{{medicine.address}}</mat-card></td>
                 <td><mat-card>{{medicine.contactPerson}}</mat-card></td>
