--- a/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
@@ -2,8 +2,8 @@
     <h2 class="text-center">Update Medicine</h2>
     <form>
       <div class="form-group">
-        <label for="name">Medicine Name:</label>
-        <input type="name" [(ngModel)]="user.medName" placeholder="Name" name="name" class="form-control" id="name">
+        <label for="medicineName">Medicine Name:</label>
+        <input type="name" [(ngModel)]="user.medicineName" placeholder="Name" name="medicineName" class="form-control" id="medicineName">
       </div>
     
       <div class="form-group">
