--- a/product-webapp/webapp/src/app/components/footer/footer.component.html
+++ b/product-webapp/webapp/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start text-muted">
+<footer class="text-center text-lg-start text-muted" style="background: #4154F1;">
     <!-- Section: Social media -->
   
   
     <!-- Section: Links  -->
-    <section class="">
+    <section class="" style="color: white;">
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
@@ -65,7 +65,7 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
+            <h6 class="text-uppercase fw-bold mb-4 pl-4">
               Contact
             </h6>
             <p><i class="fas fa-home me-3"></i> Bangalore, India</p>
@@ -84,7 +84,7 @@
     <!-- Section: Links  -->
   
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0); color: white;">
       © 2021 Copyright:
       <a class="text-reset fw-bold" href="#">kawach.com</a>
     </div>
