--- a/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
@@ -2,11 +2,11 @@
   <div class="col-md-6">
     <div>
       <img class='image' src='https://media.istockphoto.com/vectors/group-of-doctor-and-nurse-unite-standing-together-to-fight-corona-vector-id1249123814' alt = "Image is not there"
-    Width = "500" height="200" style="position: relative; top: -10px; ">
+    Width = "500" height="200" style="margin-right: 20px;">
     </div>
   </div>
-  <div class="col-md-6">
-    <mat-card>
+  <div class="col-md-6 p-2">
+    <mat-card class="matcard">
 
       <mat-card-header>
         <mat-card-title>Patient login here</mat-card-title>
