--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -27,9 +27,12 @@
     
   <!-- <nav class="navbar navbar-light fixed-top nav1"> -->
     <div class="container-fluid" pb-3>
-       <a class="navbar-brand font" href="#">
+       <!-- <a class="navbar-brand font" href="#">
         <img src="/assets/logopng.png" width="150" height="60" class="d-inline-block" alt="">
-    </a>
+        </a> -->
+        <a class="navbar-brand font float-start" href="#">
+          <img src="/assets/img/logo.jpg" width="200" height="60" class="d-inline-block" alt="">
+        </a>
       <div class = "Container" *ngIf="router.url === '/'">
         <input type="button" class="btn btn-primary" value="Doctor Register" routerLink="/doctorregistration">
         <input type="button" class="btn btn-primary" value="Volunteer Register" routerLink="/volunteerregistration">
