--- a/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.css
+++ b/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.css
@@ -1,10 +1,16 @@
 .center {
   width: 100%;
 }
-td, th {
+td {
   padding: 5px;
-  text-align:center;    
+     
 }
 table {
   width: 100%;
+}
+th{
+  background-color: #4154F1;
+  padding: 5px;
+  text-align:center;  
+  color: white
 }
