Full Working Form

--- a/product-webapp/webapp/src/app/components/upload-file/upload-file.component.html
+++ b/product-webapp/webapp/src/app/components/upload-file/upload-file.component.html
@@ -9,7 +9,7 @@
   <div class="col-sm-3">
     <div>
       <button mat-raised-button color="primary" [disabled]="!selectedFiles" (click)="upload()">
-        Upload File
+        Upload
       </button>
     </div>
   </div>
