--- a/product-webapp/webapp/src/app/components/upload-file/upload-file.component.css
+++ b/product-webapp/webapp/src/app/components/upload-file/upload-file.component.css
@@ -2,12 +2,12 @@
   width: 100%;
   padding-top: 0px;
 }
-button{
+/* button{
   margin-top: 8px;
   margin-left: 20px;
   align-items: right;
   size: 20px;
-}
+} */
 .mat-form-field{
   padding-top: 0.0px;
   line-height: 1;
