--- a/product-webapp/webapp/src/app/components/landing-page/grid/doctor-card/doctor-card.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/doctor-card/doctor-card.component.html
@@ -7,7 +7,7 @@
   <img mat-card-image src="/assets/doctor.jpg">
   <mat-card-content>
     <p>
-      Our corona warrior present to help people in need of consultation via live video chat
+      With the massive pressure that pandemic brings on the Health Infrastructure, the most courageous yet vulnerable frontline workers are Doctors..
     </p>
   </mat-card-content>
   <mat-card-actions>
