--- a/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
@@ -7,7 +7,7 @@
     <img mat-card-image src="/assets/volunteers.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        Kind hearted people who come forward to give information about medical resources
+        Given the many challenges presented by the pandemic, the show of solidarity exhibited through volunteering is really heartening. Volunteers exhibit pure selflessness for the greater cause of a humanity..
       </p>
     </mat-card-content>
     <mat-card-actions>
