--- a/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6">
     <div>
-      <img class='image' src='https://media.istockphoto.com/vectors/group-of-doctor-and-nurse-unite-standing-together-to-fight-corona-vector-id1249123814' alt = "Image is not there"
-    Width = "500" height="200" style="margin-right: 20px;">
+      <img class='img-responsive' src='/assets/img/strongTogether.jpg' alt = "Image is not there"
+    Width = "400" height="200" style="margin-right: 20px;">
     </div>
   </div>
   <div class="col-md-6 p-2">
