login UI update

--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,5 +1,7 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
-<mat-grid-list cols="3" rowHeight= "4:1">
+
+
+<!-- <mat-grid-list cols="3" rowHeight= "4:1">
     <mat-grid-tile >
         <button mat-raised-button color="primary" routerLink="/addmedicine">
             Add Resources
@@ -20,10 +22,10 @@
             </mat-action-row>
             <mat-action-row>
             <button mat-raised-button color="primary" class="btn btn-md btn-primary btn-style" (click)="routeTo('Bed')"> Bed</button>
-            </mat-action-row>-->
+            </mat-action-row>
     </mat-grid-tile>
 
 </mat-grid-list>
 <br>
 <br>
-<br>
+<br> -->
