--- a/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
+++ b/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
@@ -67,6 +67,10 @@
           <div class="form-group">
             <label for="mobileNumber">Mobile Number:</label>
             <input type="number" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+            <mat-error *ngIf="mobFormControl.errors?.pattern && !mobFormControl.hasError('required')">
+              Please enter a valid Valid Phone Number
+            </mat-error>
+            <mat-error *ngIf="mobFormControl.hasError('required')"> Phone Number is required </mat-error>
           </div>
         </mat-card>
           <mat-card>
