--- a/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
@@ -1,5 +1,5 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
-<mat-grid-list cols="3" rowHeight= "3:1" style="">
+<mat-grid-list cols="3" rowHeight= "3:1">
     <mat-grid-tile >
         <button mat-stroked-button color="primary">
         Add Resources </button>
@@ -68,6 +68,10 @@
           <div class="form-group">
             <label for="mobileNumber">Mobile Number:</label>
             <input type="number" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+            <mat-error *ngIf="mobFormControl.errors?.pattern && !mobFormControl.hasError('required')">
+              Please enter a valid Valid Phone Number
+            </mat-error>
+            <mat-error *ngIf="mobFormControl.hasError('required')"> Phone Number is required </mat-error>
           </div>
         </mat-card>
         <mat-card>
