--- a/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
@@ -1,4 +1,65 @@
-<h1 style="text-align:center">War Room Dashboard</h1>
+<div class="container">
+    <div class="col-md-6">
+      <mat-card>
+        <h2 class="text-center">Add Medicine</h2>
+      </mat-card>
+        <form>
+          <mat-card>
+          <div class="form-group">
+            <label for="medicineName">Medicine Name:</label>
+            <input type="name" [(ngModel)]="user.medicineName" placeholder="Medicine Name" name="medicineName" class="form-control" id="medicineName">
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-group">
+            <label for="pharmacy">Pharmacy:</label>
+            <input [(ngModel)]="user.pharmacy" placeholder="Pharmacy" name="pharmacy" class="form-control" id="pharmacy">
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-group">
+            <label for="city">City:</label>
+            <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="city">
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-group">
+            <label for="address">Address:</label>
+            <input type="name" [(ngModel)]="user.address" placeholder="Address" name="address" class="form-control" id="address">
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-group">
+            <label for="contactPerson">Contact Person:</label>
+            <input type="name" [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-group">
+            <label for="mobileNumber">Mobile Number:</label>
+            <input type="number" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+            <mat-error *ngIf="mobFormControl.errors?.pattern && !mobFormControl.hasError('required')">
+              Please enter a valid Valid Phone Number
+            </mat-error>
+            <mat-error *ngIf="mobFormControl.hasError('required')"> Phone Number is required </mat-error>
+          </div>
+        </mat-card>
+        <mat-card>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Click here only if it's verified
+            </label>
+          </div>
+        </mat-card>
+        <mat-card>
+          <button mat-raised-button color="primary" class="btn btn-success" (click)="CreateMedicine()">Submit</button>
+        </mat-card>
+        </form>
+        </div>
+    </div>
+
+<!-- <h1 style="text-align:center">War Room Dashboard</h1>
 <mat-grid-list cols="3" rowHeight= "3:1" style="">
     <mat-grid-tile >
         <button mat-stroked-button color="primary">
@@ -9,10 +70,6 @@
     </mat-grid-tile>
     <mat-grid-tile >
         <button mat-raised-button color="primary" routerLink=""> Verification</button>
-                <!--
-            <mat-action-row>
-            
-            </mat-action-row>-->
     </mat-grid-tile>
 <mat-grid-tile rowspan="2">
 <mat-list role="list">
@@ -86,7 +143,7 @@
     </div>
     
 </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
 
 <!---
 <div class="container" style="">
