--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -5,7 +5,7 @@
 <button mat-raised-button color="accent"> BEDS </button>
 <br>
 
-{{closeSos.patientName}}
+<!-- {{closeSos.patientName}}
 {{closeSos.phoneNo}}
 {{closeSos.gender}}
 {{closeSos.email}}
@@ -14,6 +14,6 @@
 {{closeSos.requir[0]}}
 {{closeSos.requir[1]}}
 {{closeSos.requir[2]}}
-{{closeSos.requestStatus}}
+{{closeSos.requestStatus}} -->
 
 ###############################################################
