--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-add/warroom-add.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-add/warroom-add.component.html
@@ -1,4 +1,26 @@
-<h1 style="text-align:center">War Room Dashboard</h1>
+<div style="width: 45%;">
+    <mat-card>
+        <mat-list role="list">
+            <mat-list-item role="listitem">
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addmedicine">Add Medicine</button>
+            </mat-list-item>
+            <mat-list-item role="listitem">
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addequipment">Add Medical Equipment</button>
+            </mat-list-item>
+            <mat-list-item role="listitem">
+                <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addbed">Add Bed</button>
+            </mat-list-item>
+          </mat-list>
+    </mat-card>
+</div>
+
+<div style="width: 45%;">
+    
+</div>
+
+
+
+<!-- <h1 style="text-align:center">War Room Dashboard</h1>
 <mat-grid-list cols="3" rowHeight= "3:1">
     <mat-grid-tile >
         <button mat-raised-button color="primary" routerLink="/">Medical SOS</button>
@@ -10,10 +32,7 @@
                 <button mat-stroked-button color="primary">
                     Add Resources
                 </button>
-                <!--
-            <mat-action-row>
-            
-            </mat-action-row>-->
+                
     </mat-grid-tile>
 <mat-grid-tile>
 <mat-list role="list">
@@ -28,7 +47,16 @@
     </mat-list-item>
   </mat-list>
 </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
+
+
+
+
+
+
+
+
+
 <!--<button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addmedicine"> Medicine</button>            
 <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addequipment"> Medical Equipment</button>
  <button style="margin-left: 40px;" mat-raised-button color="primary" routerLink="/addbed"> Bed</button>-->
