--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,5 +1,48 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
 
+<mat-tab-group mat-align-tabs="center">
+    <mat-tab label="Medical SOS"> <app-close-sos></app-close-sos> </mat-tab>
+
+    <mat-tab label="Verification"> Verification Component to be placed here </mat-tab>
+
+    <mat-tab label="Add Resources"> 
+        <br>
+        <br>
+        <div class="container">
+            <div id="content">
+              <div id="main-content">
+                <mat-tab-group >
+                    <mat-tab label="Medicine">
+                        <app-add-medicine></app-add-medicine> 
+                    </mat-tab>
+                
+                    <mat-tab label="Medical Equipment"> <app-add-equipment></app-add-equipment> </mat-tab>
+                
+                    <mat-tab label="Bed">
+                        <app-add-bed></app-add-bed>
+                                     
+                    </mat-tab>
+                  </mat-tab-group>
+              </div>
+            </div>
+          </div>
+          
+
+        <!-- <mat-tab-group mat-align-tabs="center">
+            <mat-tab label="Medicine" style="margin-top: 100px;">
+                <app-add-medicine></app-add-medicine> 
+            </mat-tab>
+        
+            <mat-tab label="Medical Equipment"> <app-add-equipment></app-add-equipment> </mat-tab>
+        
+            <mat-tab label="Bed">
+                <app-add-bed></app-add-bed>
+                             
+            </mat-tab>
+          </mat-tab-group> -->
+        
+    </mat-tab>
+  </mat-tab-group>
 
 <!-- <mat-grid-list cols="3" rowHeight= "4:1">
     <mat-grid-tile >
