--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -67,13 +67,13 @@
           </div>
         </mat-card>
         <mat-card>
-          <div class="form-check">
-            <input [(ngModel)]="isActive" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-            <!-- <input [(ngModel)]="isActive" type="checkbox"> -->
-            <!-- <mat-checkbox [(ngModel)]="isActive"> -->
+          <div class="form-check" *ngFor = "let n of vStatus">
+            <!-- <input [(ngModel)]="user.verificationStatus" [checked]="user.verificationStatus" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
               Confirmed and verified
-            </label>
+            </label> -->
+            <div><input [checked]="n.select" [value] = "n.id" class = "form-check-input" type="checkbox" (change)="onChange($event)"></div>
+            <div>{{n.name}}</div>
           </div>
         </mat-card>
         <mat-card>
