--- a/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
+++ b/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
@@ -10,6 +10,7 @@
                 <th><mat-card>Address</mat-card></th>
                 <th><mat-card>Contact Person</mat-card></th>
                 <th><mat-card>Mobile Number</mat-card></th>
+                <th><mat-card>Verification Status</mat-card></th>
             </tr>
         </thead>
         <tbody>
@@ -20,6 +21,7 @@
                 <td><mat-card>{{medicine.address}}</mat-card></td>
                 <td><mat-card>{{medicine.contactPerson}}</mat-card></td>
                 <td><mat-card>{{medicine.mobileNumber}}</mat-card></td>
+                <td><mat-card>{{medicine.verificationStatus}}</mat-card></td>
                 <td><mat-card><button class="btn btn-danger" (click)="deleteMedicine(medicine)">Delete Medicine</button></mat-card></td>
             </tr>
         </tbody>
