Rectified problems while moving between pages

--- a/product-webapp/webapp/src/app/components/footer/footer.component.html
+++ b/product-webapp/webapp/src/app/components/footer/footer.component.html
@@ -15,7 +15,7 @@
               <i class="fas fa-gem me-3 p-4"></i>Kawach
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              A website dedicated for getting help and providing help in this pandemic situation
             </p>
           </div>
           <!-- Grid column -->
