--- a/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
@@ -7,11 +7,13 @@
     <img mat-card-image src="/assets/volunteers.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        Given the many challenges presented by the pandemic, the show of solidarity exhibited through volunteering is really heartening. Volunteers exhibit pure selflessness for the greater cause of a humanity..
+        Given the many challenges presented by the pandemic, the show of solidarity exhibited through volunteering is really heartening. Volunteers exhibit pure selflessness for the greater cause
       </p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button routerLink="/volunteerregistration">Become our volunteer</button>
     </mat-card-actions>
-  </mat-card>
+</mat-card>
+
+
   
