--- a/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
+++ b/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
@@ -3,37 +3,19 @@
     padding: 10em;
 }
 
-table,form{
+/* table,form{
     width: 40%;
     margin-left: auto;
     margin-right: auto;
-}
-
-/* .mat-form-field {
-    margin-right: 12px;
-  } */
-
-.example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
-}
-
-.mat-slider {
-    width: 300px;
-  }
-/* mat-card {text-align: center}
-mat-card-title{text-align: center} */
-
-.form-container{
-    margin: 0 auto;
-    width: 0px auto;
-    margin-top: 20px;
-}
-.button{
-    top:10%;
-    right: 10%;
-}
+} */
 
 form{
     display: flex;
   justify-content: center;
+}
+
+.form-container{
+    /* margin: 0 auto;
+    width: 0px auto; */
+    margin-top: 20px;
 }
