--- a/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.html
@@ -136,7 +136,7 @@
       
         <mat-form-field appearance="outline" style="width: 300px;">
           <mat-label>Phone Number</mat-label>
-          <input matInput type="number"  formControlName="phoneNumber" required>
+          <input matInput type="number" formControlName="phoneNumber" required minlength="10" maxlength="10">
           <mat-error *ngIf="profileForm.get('phoneNumber')?.invalid && profileForm.get('phoneNumber')?.touched">Required Field</mat-error>
         </mat-form-field><br>
   
@@ -164,7 +164,7 @@
           <mat-error *ngIf="profileForm.get('password')?.invalid && profileForm.get('password')?.touched">Required Field</mat-error>
         </mat-form-field><br>
   
-  
+      
       <div class="custom-file fileInputProfileWrap">
         <input
           type="file"
